# arduino

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  .stylelintrc.json  CLAUDE.md  README.md  angular.json  compose.dev.yml  compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml
backend/apps/articles/: apps.py  models.py  serializers.py
backend/apps/articles/migrations/: 0001_initial.py
backend/apps/blocks/: apps.py  code.py  flat_stream_serializer.py  image.py  parts.py  pinout.py  text.py
backend/apps/contract/management/commands/: seed_fixtures.py
backend/apps/datasheets/: apps.py  models.py
backend/apps/datasheets/migrations/: 0001_initial.py
backend/apps/lessons/: models.py
backend/apps/lessons/migrations/: 0001_initial.py
backend/apps/schematics/: apps.py  models.py
backend/apps/schematics/migrations/: 0001_initial.py  0002_alter_schematicpage_download_url.py
backend/wagtail_arduino/: api.py  asgi.py  storage.py  urls.py  wsgi.py
backend/wagtail_arduino/settings/: base.py  dev.py  prod.py
docs/: copy-style-uk.md  force-en-audit.md  typography-checklist.md
scripts/: contract-diff.mjs  lint-fixtures.mjs  normalize-fixture-nbsp.mjs  tokenize-fixtures.mjs
src/: index.html  main.server.ts  main.ts
src/lib/: intl.ts  (+2 more)
(+221 files in other folders)
